# SafeEdit

./: .gitignore  AGENTS.md  AGENTS.md.bak  LICENSE.md  README.md
docs/: qa_testing_checklist.md  safe_edit_tool_plan.md  safe_edit_tool_plan.md.bak
qa_sandbox/: block_body.txt  changelog.diff  heredoc_test.txt  main.diff  test.patch
qa_sandbox/app/: main.rs
qa_sandbox/app/lib/: utils.rs
qa_sandbox/docs/: readme.md
qa_sandbox/notes/encodings/: latin1.txt
qa_sandbox/recipes/: bad.yaml  refactor.yaml  rename.yaml
safeedit/: Cargo.toml
safeedit/src/: batch.rs  commands.rs  diff.rs  encoding.rs  files.rs  logging.rs  main.rs  normalize.rs  patch.rs  review.rs  transform.rs
