[package]
name = "safeedit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
globset = "0.4"
walkdir = "2.5"
chardetng = "0.1"
encoding_rs = "0.8"
regex = "1.11"
similar = "2.6"
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
tempfile = "3.10"
